<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lab"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="countUp"
        android:text="@string/countup"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="100sp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/button_enemyCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/enemycountup"
        android:textAlignment="center"
        android:textSize="16sp"
        android:onClick="eCountUp"
         />
    <TextView
        android:id="@+id/show_enemyCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="100sp"
        android:textColor="@color/black"/>


</LinearLayout>